tests/compile_fail/enum_every_variant_has_skips.stderr
error: There must be at least one non-skipped variant
 --> tests/compile_fail/enum_every_variant_has_skips.rs:4:10
  |
4 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one non-skipped variant
  --> tests/compile_fail/enum_every_variant_has_skips.rs:10:10
   |
10 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)
